--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,10 @@
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url = jdbc:mysql://localhost:3306/student_staff_assistance?autoReconnect=true&useSSL=false
+spring.datasource.url = jdbc:mysql://localhost:3306/test?autoReconnect=true&useSSL=false
 spring.datasource.username = root
-spring.datasource.password = meet_solumina
+spring.datasource.password = bornio
+
+## JWT Secret: It is used to decode jwt token
+jwt.secret=javainuse
 
 
 ## Hibernate Properties
@@ -14,7 +17,7 @@ spring.aop.proxy-target-class=true
 spring.jpa.show-sql=true
 
 server.servlet.contextPath=/api
-server.port=8085
+server.port=8080
 
 ## MULTIPART (MultipartProperties)
 # Enable multipart uploads
