--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,7 +16,7 @@ spring.jpa.hibernate.ddl-auto = update
 spring.aop.proxy-target-class=true
 spring.jpa.show-sql=true
 
-server.servlet.contextPath=/api
+server.servlet.contextPath=/api/v1
 server.port=8080
 
 ## MULTIPART (MultipartProperties)
